Avoid running `docker.yml` GitHub action if only `README.md` is updated

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main
+    # Don't run if just the README is being updated
+    paths-ignore:
+      - 'README.md'
 
 jobs:
   build:
